Fix HTML structure and ensure proper formatting
Corrected the HTML structure and added missing elements.

--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
                                 <th>MS</th>
                                 <th>BB</th>
                                 <th>DREAM</th>
+                                <th>TRENDY CULTURE</th>
                                 <th>Remark</th>
                                 <th>Actions</th>
                             </tr>
