Add search box to data entry section
Added a search box for filtering design numbers in the data entry section.

--- a/index.html
+++ b/index.html
@@ -94,6 +94,10 @@
                 <header>
                     <h1>Data Entry</h1>
                     <div class="controls">
+                        <div class="search-box">
+                            <input type="text" id="search-input" placeholder="Search Design No...">
+                            <i class="fas fa-search"></i>
+                        </div>
                         <button id="add-50-rows" class="btn-primary">+ Add 50 Rows</button>
                         <button id="save-data" class="btn-success"><i class="fas fa-save"></i> Save</button>
                     </div>
